--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^8.0.4",
     "apollo-server-express": "^3.7.0",
     "graphql": "^16.5.0",
+    "graphql-type": "^1.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
