--- a/exempl.env
+++ b/exempl.env
@@ -1,3 +1,18 @@
+APP_NAME=
+APP_PORT=
+
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_NAME=
+DATABASE_PASSWORD=
+
+JWT_SECRET=
+JWT_EXPIRES_IN=
+
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
+
+
+
